--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,8 +1,8 @@
 body {
 	font-family: $font-primary;
 	font-size: $font-regular;
-	color: $gray-lightest;
-	background-color: $gray-darkest;
+	//color: $gray-lightest;
+	//background-color: $gray-darkest;
 
 	&.noscroll {
 		overflow: hidden;
@@ -103,8 +103,8 @@ b,
 
 figure {
 	text-align: center;
-    background-color: $gray-lightest;
-	color: $gray-darkest;
+    //background-color: $gray-lightest;
+	//color: $gray-darkest;
     padding: 1rem;
     border-radius: 1rem;
 	font-size: 1.25rem;
@@ -118,13 +118,13 @@ button {
 
 a {
 	text-decoration: none !important;
-	color: $orange;
+	//color: $orange;
 	@include transition(all $speed-hover ease-out);
 }
 
 a:hover {
-	color: $gray-darker;
-	background-color: $orange;
+	//color: $gray-darker;
+	//background-color: $orange;
 }
 // a
 // END BUTTONS + LINKS
