--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -21,6 +21,19 @@ $single-gap: 1rem;
 $double-gap: 2rem;
 
 // COLOURS
+$black: #000000;
+$white: #fff;
+$red: #ff0000;
+$maroon: #800000;
+$blue: #000080;
+$cyan: #2B7EFA;
+$green: #008000;
+$gray-light: #CBCBCB;
+$gray: #9a9a9a;
+$magenta: #800080;
+$orange: #CC6600;
+$pink: #CC99CC;
+$yellow-light: #FFFF80;
 // END COLOURS
 
 // FONTS
