--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,95 +1,120 @@
-.guitar__fret {
-    border-right: 2px solid #000;
-}
+.guitar {
+    .row,
+    .col-12,
+    .col-11,
+    .col-10,
+    .col-9,
+    .col-8,
+    .col-7,
+    .col-6,
+    .col-5,
+    .col-4,
+    .col-3,
+    .col-2,
+    .col-1,
+    .col {
+        margin: 0;
+        padding: 0;
+    }
 
-.guitar__nut {
-    border-left: 5px solid #000;
-}
+    .guitar__fret {
+        border-right: 2px solid $black;
+    }
 
-.guitar__legend {
-    font-weight: bold;
-}
+    .guitar__nut {
+        border-left: 5px solid $black;
+    }
 
-.guitar__string-label {
-    padding-top: 0.4rem;
-    padding-right: 0.75rem;
-}
+    .guitar__legend {
+        font-weight: bold;
+    }
 
-.guitar__block,
-.guitar__finger {
-    font-weight: bold;
-    margin: 0.3rem 0;
-}
+    .guitar__string-label {
+        padding-top: 0.4rem;
+        padding-right: 0.75rem;
+    }
 
-.guitar__block {
-    color: #fff;  
-    border: 0;
-}
+    .guitar__block,
+    .guitar__finger {
+        font-weight: bold;
+        margin: 0.3rem 0;
+    }
 
-.guitar__finger {
-    border-radius: 2rem;
-    background-color: #fff;
-    border: 1px solid #000;
-    color: #000;
-}
+    .guitar__block {
+        color: $white;  
+        border: 0;
+    }
 
-.guitar__interval-root,
-.guitar__interval-octave,
-.guitar__interval-fourth,
-.guitar__interval-fifth {
-    background-color: #800000;
-}
+    .guitar__finger {
+        border-radius: 2rem;
+        background-color: $white;
+        border: 1px solid $black;
+        color: $black;
+    }
 
-.guitar__interval-second {
-    background-color: #000080;
-}
+    .guitar__interval-root,
+    .guitar__interval-octave,
+    .guitar__interval-fourth,
+    .guitar__interval-fifth {
+        background-color: $maroon;
+    }
 
-.guitar__interval-third {
-    background-color: #2B7EFA;
-}
+    .guitar__interval-second {
+        background-color: $blue;
+    }
 
-.guitar__interval-augmented {
-    background-color: #008000;
-}
+    .guitar__interval-third {
+        background-color: $cyan;
+    }
 
-.guitar__interval-diminished {
-    background-color: #CBCBCB;
-}
+    .guitar__interval-augmented {
+        background-color: $green;
+    }
 
-.guitar__interval-sixth {
-    background-color: #800080;
-}
+    .guitar__interval-diminished {
+        background-color: $gray-light;
+    }
 
-.guitar__interval-seventh {
-    background-color:#CC6600;
-}
+    .guitar__interval-sixth {
+        background-color: $magenta;
+    }
 
-.guitar__interval-dom-seventh {
-    background-color:#CC99CC;
-}
+    .guitar__interval-seventh {
+        background-color: $orange;
+    }
 
-.guitar__interval-ninth,
-.guitar__interval-eleventh {
-    background-color:#FFFF80;
-}
+    .guitar__interval-dom-seventh {
+        background-color: $pink;
+    }
 
-.guitar__chord {
-    border: 2px solid #f00;
-    text-transform: uppercase;
-}
+    .guitar__interval-ninth,
+    .guitar__interval-eleventh {
+        background-color: $yellow-light;
+    }
 
+    .guitar__chord {
+        border: 2px solid $red;
+        text-transform: uppercase;
+    }
 
-.guitar__string-sixth hr,
-.guitar__string-fifth hr {
-    height: 4px;
-}
+    hr {
+        border-width:0;
+        color: $black;
+        background-color: $black;
+    }
 
-.guitar__string-fourth hr,
-.guitar__string-third hr {
-    height: 5px;
-}
+    .guitar__string-sixth hr,
+    .guitar__string-fifth hr {
+        height: 4px;
+    }
 
-.guitar__string-second hr,
-.guitar__string-first hr {
-    height: 6px;
+    .guitar__string-fourth hr,
+    .guitar__string-third hr {
+        height: 5px;
+    }
+
+    .guitar__string-second hr,
+    .guitar__string-first hr {
+        height: 6px;
+    }
 }
